# RLRapidResponse

./: .gitignore  CLAUDE.md  README.md  STEPS.md  main.py  mci_cli.py  pyproject.toml
backend/: README.md  app.py  requirements.txt  test_api.sh  test_backend.py  test_jobs.sh
backend/controllers/: process_manager.py  scenario_manager.py  simulation_manager.py
backend/utils/: json_utils.py
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: InteractiveScenarioBuilder.jsx  JobList.jsx  LogViewer.jsx  Navigation.jsx  ScenarioConfigurator.jsx  ScenarioList.jsx  ScenarioMap.jsx  StartJobForm.jsx
frontend/src/contexts/: JobContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: JobDashboard.jsx  LiveVisualization.jsx  ScenarioManager.jsx
frontend/src/services/: api.js
hospital_viz/backend/: app.py  pyproject.toml
hospital_viz/frontend/: package.json
hospital_viz/frontend/src/: App.css  App.jsx  index.css
hospital_viz/frontend/src/components/: HospitalFilters.jsx  HospitalMap.jsx  LoadingSpinner.css  LoadingSpinner.jsx  SearchBox.jsx
scenarios/benchmark/: index.json  tampa_1.json  tampa_2.json
simulator/: evaluate.py  generate_benchmark_scenarios.py  run_simulation.py  simulation_engine.py  train.py
simulator/agents/: __init__.py  baselines.py
simulator/environment/: hospital_loader.py  mci_env.py  patient_model.py  routing.py  scenario_generator.py
